added JSON exercises

--- a/notebooks/Web services XML and JSON.ipynb
+++ b/notebooks/Web services XML and JSON.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Working with XML"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -169,6 +176,177 @@
     "\n",
     "print(sum(values))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Working with JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Chuck\n",
+      "Hide: yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# working with what would be called a dicitionary within Python - but in JSON is an object\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "data = '''\n",
+    "{\n",
+    "  \"name\" : \"Chuck\",\n",
+    "  \"phone\" : {\n",
+    "    \"type\" : \"intl\",\n",
+    "    \"number\" : \"+1 734 303 4456\"\n",
+    "   },\n",
+    "   \"email\" : {\n",
+    "     \"hide\" : \"yes\"\n",
+    "   }\n",
+    "}'''\n",
+    "\n",
+    "info = json.loads(data)\n",
+    "print('Name:',info[\"name\"])\n",
+    "print('Hide:',info[\"email\"][\"hide\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User count: 2\n",
+      "Name Chuck\n",
+      "Id 001\n",
+      "Attribute 2\n",
+      "Name Chuck\n",
+      "Id 009\n",
+      "Attribute 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# and here we use what would be called a list (of dictionaries) in Python - but in JSON is an array\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "input = '''\n",
+    "[\n",
+    "  { \"id\" : \"001\",\n",
+    "    \"x\" : \"2\",\n",
+    "    \"name\" : \"Chuck\"\n",
+    "  } ,\n",
+    "  { \"id\" : \"009\",\n",
+    "    \"x\" : \"7\",\n",
+    "    \"name\" : \"Chuck\"\n",
+    "  } \n",
+    "]'''\n",
+    "\n",
+    "info = json.loads(input)\n",
+    "print('User count:', len(info))\n",
+    "\n",
+    "for item in info:\n",
+    "    print('Name', item['name'])\n",
+    "    print('Id', item['id'])\n",
+    "    print('Attribute', item['x'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Service Oriented Approach\n",
+    "accessing API:s (Application Program Interfaces) in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import urllib.request, urllib.parse, urllib.error\n",
+    "import json\n",
+    "\n",
+    "serviceurl = 'http://maps.googleapis.com/maps/api/geocode/json?'\n",
+    "\n",
+    "while True:\n",
+    "    #address = input('Enter location: ')\n",
+    "    address = 'Ann Arbor, MI'\n",
+    "    if len(address) < 1: break\n",
+    "\n",
+    "    url = serviceurl + urllib.parse.urlencode({'address': address})\n",
+    "\n",
+    "    print('Retrieving', url)\n",
+    "    uh = urllib.request.urlopen(url)\n",
+    "    data = uh.read().decode()\n",
+    "    print('Retrieved', len(data), 'characters')\n",
+    "\n",
+    "    try:\n",
+    "        js = json.loads(data)\n",
+    "    except:\n",
+    "        js = None\n",
+    "\n",
+    "    if not js or 'status' not in js or js['status'] != 'OK':\n",
+    "        print('==== Failure To Retrieve ====')\n",
+    "        print(data)\n",
+    "        continue\n",
+    "\n",
+    "    lat = js[\"results\"][0][\"geometry\"][\"location\"][\"lat\"]\n",
+    "    lng = js[\"results\"][0][\"geometry\"][\"location\"][\"lng\"]\n",
+    "    print('lat', lat, 'lng', lng)\n",
+    "    location = js['results'][0]['formatted_address']\n",
+    "    print(location)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
