coded through a scraping exercise

--- a/notebooks/Web services XML and JSON.ipynb
+++ b/notebooks/Web services XML and JSON.ipynb
@@ -280,6 +280,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### using the google geocode API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -322,13 +329,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### using the Twitter API"
+   ]
   },
   {
    "cell_type": "code",
@@ -337,7 +342,32 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import urllib.request, urllib.parse, urllib.error\n",
+    "import twurl\n",
+    "import json\n",
+    "\n",
+    "TWITTER_URL = 'https://api.twitter.com/1.1/friends/list.json'\n",
+    "\n",
+    "while True:\n",
+    "    print('')\n",
+    "    acct = input('Enter Twitter Account:')\n",
+    "    if (len(acct) < 1): break\n",
+    "    url = twurl.augment(TWITTER_URL,\n",
+    "                        {'screen_name': acct, 'count': '5'})\n",
+    "    print('Retrieving', url)\n",
+    "    connection = urllib.request.urlopen(url)\n",
+    "    data = connection.read().decode()\n",
+    "    headers = dict(connection.getheaders())\n",
+    "    print('Remaining', headers['x-rate-limit-remaining'])\n",
+    "    js = json.loads(data)\n",
+    "    print(json.dumps(js, indent=4))\n",
+    "\n",
+    "    for u in js['users']:\n",
+    "        print(u['screen_name'])\n",
+    "        s = u['status']['text']\n",
+    "        print('  ', s[:50])\n"
+   ]
   },
   {
    "cell_type": "code",
