solved JSON assignment

--- a/notebooks/scraping_with_beautifulsoup.ipynb
+++ b/notebooks/scraping_with_beautifulsoup.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
       "shipping: $3.99 Shipping\n",
       "brand: MSI\n",
       "product_name: MSI GeForce GTX 1070 DirectX 12 GeForce GTX 1070 Quick Silver 8G OC Video Card\n",
-      "shipping: Free Shipping\n",
+      "shipping: $3.99 Shipping\n",
       "brand: XFX\n",
       "product_name: XFX Radeon RX 550 DirectX 12 RX-550P4TFG5 Video Card\n",
       "shipping: $3.99 Shipping\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
        "      <th>3</th>\n",
        "      <td>MSI</td>\n",
        "      <td>MSI GeForce GTX 1070 DirectX 12 GeForce GTX 10...</td>\n",
-       "      <td>Free Shipping</td>\n",
+       "      <td>$3.99 Shipping</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -213,11 +213,11 @@
        "0  GIGABYTE  GIGABYTE GeForce GTX 1050 Ti DirectX 12 GV-N10...  $4.99 Shipping\n",
        "1      EVGA  EVGA GeForce GTX 1060 GAMING DirectX 12 06G-P4...  $4.99 Shipping\n",
        "2      ASUS  ASUS ROG GeForce GTX 1070 STRIX-GTX1070-O8G-GA...  $3.99 Shipping\n",
-       "3       MSI  MSI GeForce GTX 1070 DirectX 12 GeForce GTX 10...   Free Shipping\n",
+       "3       MSI  MSI GeForce GTX 1070 DirectX 12 GeForce GTX 10...  $3.99 Shipping\n",
        "4       XFX  XFX Radeon RX 550 DirectX 12 RX-550P4TFG5 Vide...  $3.99 Shipping"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,72 +226,6 @@
     "import pandas as pd\n",
     "df_products = pd.read_csv('products.csv')\n",
     "df_products.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup as soup  # HTML data structure\n",
-    "from urllib.request import urlopen as uReq  # Web client\n",
-    "\n",
-    "# URl to web scrap from.\n",
-    "# in this example we web scrap graphics cards from Newegg.com\n",
-    "page_url = \"http://www.newegg.com/Product/ProductList.aspx?Submit=ENE&N=-1&IsNodeId=1&Description=GTX&bop=And&Page=1&PageSize=36&order=BESTMATCH\"\n",
-    "\n",
-    "# opens the connection and downloads html page from url\n",
-    "uClient = uReq(page_url)\n",
-    "\n",
-    "# parses html into a soup data structure to traverse html\n",
-    "# as if it were a json data type.\n",
-    "page_soup = soup(uClient.read(), \"html.parser\")\n",
-    "uClient.close()\n",
-    "\n",
-    "# finds each product from the store page\n",
-    "containers = page_soup.findAll(\"div\", {\"class\": \"item-container\"})\n",
-    "\n",
-    "# name the output file to write to local disk\n",
-    "out_filename = \"graphics_cards.csv\"\n",
-    "# header of csv file to be written\n",
-    "headers = \"brand,product_name,shipping\\n\"\n",
-    "\n",
-    "# opens file, and writes headers\n",
-    "f = open(out_filename, \"w\")\n",
-    "f.write(headers)\n",
-    "\n",
-    "# loops over each product and grabs attributes about\n",
-    "# each product\n",
-    "for container in containers:\n",
-    "    # Finds all link tags \"a\" from within the first div.\n",
-    "    make_rating_sp = container.div.select(\"a\")\n",
-    "\n",
-    "    # Grabs the title from the image title attribute\n",
-    "    # Then does proper casing using .title()\n",
-    "    brand = make_rating_sp[0].img[\"title\"].title()\n",
-    "\n",
-    "    # Grabs the text within the second \"(a)\" tag from within\n",
-    "    # the list of queries.\n",
-    "    product_name = container.div.select(\"a\")[2].text\n",
-    "\n",
-    "    # Grabs the product shipping information by searching\n",
-    "    # all lists with the class \"price-ship\".\n",
-    "    # Then cleans the text of white space with strip()\n",
-    "    # Cleans the strip of \"Shipping $\" if it exists to just get number\n",
-    "    shipping = container.findAll(\"li\", {\"class\": \"price-ship\"})[0].text.strip().replace(\"$\", \"\").replace(\" Shipping\", \"\")\n",
-    "\n",
-    "    # prints the dataset to console\n",
-    "    print(\"brand: \" + brand + \"\\n\")\n",
-    "    print(\"product_name: \" + product_name + \"\\n\")\n",
-    "    print(\"shipping: \" + shipping + \"\\n\")\n",
-    "\n",
-    "    # writes the dataset to file\n",
-    "    f.write(brand + \", \" + product_name.replace(\",\", \"|\") + \", \" + shipping + \"\\n\")\n",
-    "\n",
-    "f.close()  # Close the file"
    ]
   },
   {
