--- a/notebooks/Web services XML and JSON.ipynb
+++ b/notebooks/Web services XML and JSON.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -288,13 +288,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'import urllib.request, urllib.parse, urllib.error\\nimport json\\n\\nserviceurl = \\'http://maps.googleapis.com/maps/api/geocode/json?\\'\\n\\nwhile True:\\n    #address = input(\\'Enter location: \\')\\n    address = \\'Ann Arbor, MI\\'\\n    if len(address) < 1: break\\n\\n    url = serviceurl + urllib.parse.urlencode({\\'address\\': address})\\n\\n    print(\\'Retrieving\\', url)\\n    uh = urllib.request.urlopen(url)\\n    data = uh.read().decode()\\n    print(\\'Retrieved\\', len(data), \\'characters\\')\\n\\n    try:\\n        js = json.loads(data)\\n    except:\\n        js = None\\n\\n    if not js or \\'status\\' not in js or js[\\'status\\'] != \\'OK\\':\\n        print(\\'==== Failure To Retrieve ====\\')\\n        print(data)\\n        continue\\n\\n    lat = js[\"results\"][0][\"geometry\"][\"location\"][\"lat\"]\\n    lng = js[\"results\"][0][\"geometry\"][\"location\"][\"lng\"]\\n    print(\\'lat\\', lat, \\'lng\\', lng)\\n    location = js[\\'results\\'][0][\\'formatted_address\\']\\n    print(location)\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import urllib.request, urllib.parse, urllib.error\n",
+    "'''import urllib.request, urllib.parse, urllib.error\n",
     "import json\n",
     "\n",
     "serviceurl = 'http://maps.googleapis.com/maps/api/geocode/json?'\n",
@@ -325,7 +336,8 @@
     "    lng = js[\"results\"][0][\"geometry\"][\"location\"][\"lng\"]\n",
     "    print('lat', lat, 'lng', lng)\n",
     "    location = js['results'][0]['formatted_address']\n",
-    "    print(location)\n"
+    "    print(location)\n",
+    "'''"
    ]
   },
   {
@@ -337,13 +349,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"import urllib.request, urllib.parse, urllib.error\\nimport twurl\\nimport json\\n\\nTWITTER_URL = 'https://api.twitter.com/1.1/friends/list.json'\\n\\nwhile True:\\n    print('')\\n    acct = input('Enter Twitter Account:')\\n    if (len(acct) < 1): break\\n    url = twurl.augment(TWITTER_URL,\\n                        {'screen_name': acct, 'count': '5'})\\n    print('Retrieving', url)\\n    connection = urllib.request.urlopen(url)\\n    data = connection.read().decode()\\n    headers = dict(connection.getheaders())\\n    print('Remaining', headers['x-rate-limit-remaining'])\\n    js = json.loads(data)\\n    print(json.dumps(js, indent=4))\\n\\n    for u in js['users']:\\n        print(u['screen_name'])\\n        s = u['status']['text']\\n        print('  ', s[:50])\\n\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import urllib.request, urllib.parse, urllib.error\n",
+    "'''import urllib.request, urllib.parse, urllib.error\n",
     "import twurl\n",
     "import json\n",
     "\n",
@@ -366,8 +389,152 @@
     "    for u in js['users']:\n",
     "        print(u['screen_name'])\n",
     "        s = u['status']['text']\n",
-    "        print('  ', s[:50])\n"
+    "        print('  ', s[:50])\n",
+    "'''"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Doing Assignment 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User count: 2\n",
+      "Name Chuck\n",
+      "Id 001\n",
+      "Attribute 2\n",
+      "Name Chuck\n",
+      "Id 009\n",
+      "Attribute 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# suggested code for inspiration\n",
+    "\n",
+    "import json\n",
+    "from urllib.request import urlopen as uReq\n",
+    "\n",
+    "input = '''\n",
+    "[\n",
+    "  { \"id\" : \"001\",\n",
+    "    \"x\" : \"2\",\n",
+    "    \"name\" : \"Chuck\"\n",
+    "  } ,\n",
+    "  { \"id\" : \"009\",\n",
+    "    \"x\" : \"7\",\n",
+    "    \"name\" : \"Chuck\"\n",
+    "  } \n",
+    "]'''\n",
+    "\n",
+    "info = json.loads(input)\n",
+    "print('User count:', len(info))\n",
+    "\n",
+    "for item in info:\n",
+    "    print('Name', item['name'])\n",
+    "    print('Id', item['id'])\n",
+    "    print('Attribute', item['x'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2677\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solving the assignment\n",
+    "import json\n",
+    "from urllib.request import urlopen as uReq\n",
+    "\n",
+    "sample_data = 'http://python-data.dr-chuck.net/comments_42.json' #(Sum=2553)\n",
+    "actual_data = 'http://python-data.dr-chuck.net/comments_371515.json' #(Sum ends with 77)\n",
+    "\n",
+    "# opening up connection, grabbing the page\n",
+    "uClient = uReq(actual_data)\n",
+    "page_json = uClient.read()\n",
+    "uClient.close()\n",
+    "\n",
+    "# parse the data\n",
+    "info = json.loads(page_json)\n",
+    "\n",
+    "# check if we have all the data\n",
+    "#print('User count:', len(info['comments']))\n",
+    "\n",
+    "# loop over the data and collect the values\n",
+    "values = []\n",
+    "for item in info['comments']:\n",
+    "    #print(item['count'])\n",
+    "    values.append(item['count'])\n",
+    "    \n",
+    "print(sum(values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "'''# collect the values\n",
+    "values = []\n",
+    "for item in info:\n",
+    "    #print(e.count.text)\n",
+    "    #values.append(int(e.count.text))\n",
+    "    print(item['count'])\n",
+    "\n",
+    "#print(sum(values))'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
