finished the last assignment

--- a/notebooks/Web services XML and JSON.ipynb
+++ b/notebooks/Web services XML and JSON.ipynb
@@ -397,7 +397,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Doing Assignment 2"
+    "## Doing Assignment 2\n",
+    "finding information in a JSON page"
    ]
   },
   {
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -492,22 +493,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Doing assignment 3\n",
+    "calling a JSON API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nimport urllib\\nimport json\\n\\n# serviceurl = \\'http://maps.googleapis.com/maps/api/geocode/json?\\'\\nserviceurl = \\'http://python-data.dr-chuck.net/geojson?\\'\\n\\nwhile True:\\n    address = raw_input(\\'Enter location: \\')\\n    if len(address) < 1 : break\\n\\n    url = serviceurl + urllib.urlencode({\\'sensor\\':\\'false\\', \\'address\\': address})\\n    print \\'Retrieving\\', url\\n    uh = urllib.urlopen(url)\\n    data = uh.read()\\n    print \\'Retrieved\\',len(data),\\'characters\\'\\n\\n    try: js = json.loads(str(data))\\n    except: js = None\\n    if \\'status\\' not in js or js[\\'status\\'] != \\'OK\\':\\n        print \\'==== Failure To Retrieve ====\\'\\n        print data\\n        continue\\n\\n    print json.dumps(js, indent=4)\\n\\n    lat = js[\"results\"][0][\"geometry\"][\"location\"][\"lat\"]\\n    lng = js[\"results\"][0][\"geometry\"][\"location\"][\"lng\"]\\n    print \\'lat\\',lat,\\'lng\\',lng\\n    location = js[\\'results\\'][0][\\'formatted_address\\']\\n    print location\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# suggested inspirational code\n",
+    "\n",
+    "'''\n",
+    "import urllib\n",
+    "import json\n",
+    "\n",
+    "# serviceurl = 'http://maps.googleapis.com/maps/api/geocode/json?'\n",
+    "serviceurl = 'http://python-data.dr-chuck.net/geojson?'\n",
+    "\n",
+    "while True:\n",
+    "    address = raw_input('Enter location: ')\n",
+    "    if len(address) < 1 : break\n",
+    "\n",
+    "    url = serviceurl + urllib.urlencode({'sensor':'false', 'address': address})\n",
+    "    print 'Retrieving', url\n",
+    "    uh = urllib.urlopen(url)\n",
+    "    data = uh.read()\n",
+    "    print 'Retrieved',len(data),'characters'\n",
+    "\n",
+    "    try: js = json.loads(str(data))\n",
+    "    except: js = None\n",
+    "    if 'status' not in js or js['status'] != 'OK':\n",
+    "        print '==== Failure To Retrieve ===='\n",
+    "        print data\n",
+    "        continue\n",
+    "\n",
+    "    print json.dumps(js, indent=4)\n",
+    "\n",
+    "    lat = js[\"results\"][0][\"geometry\"][\"location\"][\"lat\"]\n",
+    "    lng = js[\"results\"][0][\"geometry\"][\"location\"][\"lng\"]\n",
+    "    print 'lat',lat,'lng',lng\n",
+    "    location = js['results'][0]['formatted_address']\n",
+    "    print location\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving http://python-data.dr-chuck.net/geojson?sensor=false&address=kansas+state+university\n",
+      "Retrieved 1972 characters\n",
+      "ChIJ39MaXcPguocRlRSBbdscXis\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solving the assignment\n",
+    "import json\n",
+    "from urllib.request import urlopen as uReq\n",
+    "from urllib.parse import urlencode as uEncode\n",
+    "\n",
+    "# The program will prompt for a location\n",
+    "#address = input('Enter location: ')\n",
+    "address = 'kansas state university'\n",
+    "\n",
+    "# contact a web service and retrieve JSON for the web service and parse that data\n",
+    "endpoint = 'http://python-data.dr-chuck.net/geojson?' # we use this API endpoint with a static subset of the Google Data:\n",
+    "url = endpoint + uEncode({'sensor':'false', 'address': address})\n",
+    "print('Retrieving', url)\n",
+    "\n",
+    "uClient = uReq(url)\n",
+    "data = uClient.read()\n",
+    "uClient.close()\n",
+    "print('Retrieved',len(data),'characters')\n",
+    "\n",
+    "# and retrieve the first place_id from the JSON\n",
+    "info = json.loads(data)\n",
+    "place_id = info[\"results\"][0][\"place_id\"]\n",
+    "print(place_id)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "'''# collect the values\n",
-    "values = []\n",
-    "for item in info:\n",
-    "    #print(e.count.text)\n",
-    "    #values.append(int(e.count.text))\n",
-    "    print(item['count'])\n",
-    "\n",
-    "#print(sum(values))'''"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
